# ShapeBasedInterpolation

./: CMakeLists.txt  README.md  ShapeBasedInterpolation.remote.cmake  itk-module.cmake
include/: itkInterBinaryShapeBasedInterpolationImageFilter.h  itkIntraBinaryShapeBasedInterpolationImageFilter.h
src/: .directory  CMakeLists.txt  itkInterBinaryShapeBasedInterpolationImageFilter.cxx  itkIntraBinaryShapeBasedInterpolationImageFilter.cxx
test/: CMakeLists.txt  ShapeBasedInterpolationImageDemo.cxx
tools/: .directory  CMakeLists.txt  ChangeSlices.cxx
