PROJECT(itkBinaryShapeBasedInterpolation)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

CMAKE_POLICY(SET CMP0012 OLD)

FIND_PACKAGE(ITK)
IF(NOT ITK_FOUND)
  MESSAGE(FATAL ERROR "Please set ITK_DIR.")
ENDIF(NOT ITK_FOUND)
INCLUDE(${ITK_USE_FILE})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)


ADD_SUBDIRECTORY( filters )
ADD_SUBDIRECTORY( test )
ADD_SUBDIRECTORY( tools )

